# fractol

./: CMakeLists.txt  Makefile  fractol.h  hooks.c  init_functions.c  iteration_functions.c  main.c  more_hooks.c  threads.c
minilibx_macos/: mlx.h
